traefik/ingress_backup.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik.35.247.9.211.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-dashboard
          servicePort: 9000
